# snn_learn

./: .gitignore  README.md  main.py  pyproject.toml
src/data_loaders/: __init__.py  cifar10_dvs_loader.py  dvs_gesture_loader.py  nmnist_loader.py
src/engine/: __init__.py  builder.py  quantization.py  trainer.py  utils.py
src/models/: __init__.py  cifar10_snn.py  dvs_gesture_snn.py  nmnist_snn.py
src/tests/: test_checkpoint.py  test_gradient_flow.py  test_model.py  test_overfitting.py  test_quantization.py  test_snn_dynamics.py
wandb/: latest-run
wandb/run-20260609_113110-u6n4cns7/: run-u6n4cns7.wandb
wandb/run-20260609_113110-u6n4cns7/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
