[project]
name = "snn-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "spikingjelly>=0.0.0.0.14",
    "tonic>=1.6.0",
    "torch>=2.12.0",
    "tqdm>=4.68.1",
    "wandb>=0.27.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:torch.jit.*"
]
